--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "expo-location": "~8.1.0",
-    "expo-mail-composer": "~8.1.0"
+    "expo-mail-composer": "~8.1.0",
+    "mem": ">=4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
